# property_manager

./: .gitignore  Dockerfile  README.rst  config.py  docker-compose.debug.yml  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  forms.py  models.py  utils.py  views.py  widgets.py
app/templates/: amortization_schedule.html  base.html  financial_report.html  index.html
app/templates/appbuilder/general/models/: list_inventory.html
app/templates/widgets/: accessible_list.html
migrations/versions/: cb529ba1a331_changes_to_booking_schema.py  cbb42e8999e7_added_link_table.py  f21b7eefc7a4_added_unique_constraint_to_contact_.py
